test/k8s/manifests/star-wars-demo/policy/l7_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deathstar-api-protection"
spec:
  description: "Protect deathstar APIs"
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
  - fromEndpoints:
    - matchLabels:
        class: spaceship
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/v1/"
        - method: "POST"
          path: "/v1/request-landing$"
        - method: "PUT"
          path: "/v1/exhaust-port$"
          headers:
          - "X-Has-Force: True"
